--- a/Dont Forget Your/View/Base.lproj/Main.storyboard
+++ b/Dont Forget Your/View/Base.lproj/Main.storyboard
@@ -65,7 +65,7 @@
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ccS-ET-TTA">
                                                             <rect key="frame" x="0.0" y="0.0" width="335" height="48"/>
-                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="40"/>
                                                             <color key="textColor" cocoaTouchSystemColor="lightTextColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
@@ -106,7 +106,7 @@
                                     <outlet property="numberOfItem" destination="H9o-qh-rCW" id="Q42-2K-fzW"/>
                                     <outlet property="viewCategoryCell" destination="acZ-Ic-3to" id="oij-df-rpu"/>
                                     <outlet property="viewCategoryCellShadow" destination="6mk-J9-vvT" id="2it-zy-xPE"/>
-                                    <segue destination="Ff5-cW-PQE" kind="show" identifier="CategoryToItems" id="Dm7-4V-MZx"/>
+                                    <segue destination="Ff5-cW-PQE" kind="show" identifier="CategoryToItems" id="Lwc-fD-ceK"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="ButtonAdd" rowHeight="120" id="3C2-mw-PdB" customClass="CategoryListTableViewCell" customModule="Dont_Forget_Your" customModuleProvider="target">
@@ -121,7 +121,7 @@
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Gq-uL-xQf">
                                                     <rect key="frame" x="138.66666666666666" y="11" width="78" height="78"/>
-                                                    <state key="normal" image="AddButtonLight"/>
+                                                    <state key="normal" image="AddButton"/>
                                                     <connections>
                                                         <action selector="buttonAdd:" destination="z3J-c0-jta" eventType="touchUpInside" id="SSs-39-FUN"/>
                                                         <segue destination="DRX-58-NlT" kind="presentation" identifier="CategoryToNew" id="EyS-Ze-6Z8"/>
@@ -263,7 +263,7 @@
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MXs-cS-3X5">
                                             <rect key="frame" x="149" y="31.333333333333336" width="77.333333333333314" height="77.333333333333314"/>
-                                            <state key="normal" image="AddButtonLight"/>
+                                            <state key="normal" image="AddButton"/>
                                             <connections>
                                                 <action selector="buttonPressed:" destination="Ff5-cW-PQE" eventType="touchUpInside" id="Vmx-VZ-hfH"/>
                                                 <segue destination="7n9-45-xaq" kind="presentation" identifier="ItemToNewDetail" id="5nO-vS-Uig"/>
@@ -468,23 +468,89 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0km-bg-j84" userLabel="MiddleView">
                                         <rect key="frame" x="0.0" y="252.66666666666669" width="375" height="252.66666666666669"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Travel" translatesAutoresizingMaskIntoConstraints="NO" id="dZa-vH-bs8">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="252.66666666666666"/>
-                                            </imageView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="CaT-T7-G1I">
+                                                <rect key="frame" x="20" y="104.33333333333334" width="335" height="44"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yHm-rd-TR3">
+                                                        <rect key="frame" x="0.0" y="0.0" width="60.666666666666664" height="44"/>
+                                                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
+                                                        <state key="normal" image="FlatFlesh">
+                                                            <color key="titleColor" name="FlatFlesh"/>
+                                                        </state>
+                                                        <connections>
+                                                            <action selector="colorPicked:" destination="DRX-58-NlT" eventType="touchUpInside" id="BIv-sF-WBG"/>
+                                                        </connections>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fKq-2y-Tvp">
+                                                        <rect key="frame" x="68.666666666666671" y="0.0" width="60.666666666666671" height="44"/>
+                                                        <state key="normal" image="MelonMelody">
+                                                            <color key="titleColor" name="MelonMelody"/>
+                                                        </state>
+                                                        <connections>
+                                                            <action selector="colorPicked:" destination="DRX-58-NlT" eventType="touchUpInside" id="cqT-mP-nJN"/>
+                                                        </connections>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Ig-Rx-At0">
+                                                        <rect key="frame" x="137.33333333333334" y="0.0" width="60.333333333333343" height="44"/>
+                                                        <state key="normal" image="Livid">
+                                                            <color key="titleColor" name="Livid"/>
+                                                        </state>
+                                                        <connections>
+                                                            <action selector="colorPicked:" destination="DRX-58-NlT" eventType="touchUpInside" id="0aN-oA-vqp"/>
+                                                        </connections>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="syZ-zE-pWc">
+                                                        <rect key="frame" x="205.66666666666666" y="0.0" width="60.666666666666657" height="44"/>
+                                                        <state key="normal" image="Spray">
+                                                            <color key="titleColor" name="Spray"/>
+                                                        </state>
+                                                        <connections>
+                                                            <action selector="colorPicked:" destination="DRX-58-NlT" eventType="touchUpInside" id="KuD-zX-RD4"/>
+                                                        </connections>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nJs-A7-CVG">
+                                                        <rect key="frame" x="274.33333333333331" y="0.0" width="60.666666666666686" height="44"/>
+                                                        <state key="normal" image="ParadiseGreen">
+                                                            <color key="titleColor" name="ParadiseGreen"/>
+                                                        </state>
+                                                        <connections>
+                                                            <action selector="colorPicked:" destination="DRX-58-NlT" eventType="touchUpInside" id="IFW-eO-Mjr"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                            </stackView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please pick up a color" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dfX-JA-YaN">
+                                                <rect key="frame" x="20" y="76.000000000000028" width="335" height="20.333333333333329"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="dZa-vH-bs8" secondAttribute="trailing" id="3rR-rK-0a6"/>
-                                            <constraint firstItem="dZa-vH-bs8" firstAttribute="centerY" secondItem="0km-bg-j84" secondAttribute="centerY" id="CVp-l2-uuI"/>
-                                            <constraint firstItem="dZa-vH-bs8" firstAttribute="leading" secondItem="0km-bg-j84" secondAttribute="leading" id="Iie-5D-Ldr"/>
-                                            <constraint firstItem="dZa-vH-bs8" firstAttribute="centerX" secondItem="0km-bg-j84" secondAttribute="centerX" id="Pv3-G0-wsf"/>
-                                            <constraint firstAttribute="bottom" secondItem="dZa-vH-bs8" secondAttribute="bottom" id="abP-3x-tlw"/>
-                                            <constraint firstItem="dZa-vH-bs8" firstAttribute="top" secondItem="0km-bg-j84" secondAttribute="top" id="bRi-QH-8xR"/>
+                                            <constraint firstAttribute="trailing" secondItem="dfX-JA-YaN" secondAttribute="trailing" constant="20" id="9gI-VR-7l2"/>
+                                            <constraint firstItem="CaT-T7-G1I" firstAttribute="centerX" secondItem="0km-bg-j84" secondAttribute="centerX" id="GZF-Ti-FEf"/>
+                                            <constraint firstItem="dfX-JA-YaN" firstAttribute="leading" secondItem="0km-bg-j84" secondAttribute="leading" constant="20" id="Yda-P8-owG"/>
+                                            <constraint firstItem="CaT-T7-G1I" firstAttribute="centerY" secondItem="0km-bg-j84" secondAttribute="centerY" id="azy-zl-D6B"/>
+                                            <constraint firstItem="CaT-T7-G1I" firstAttribute="top" secondItem="dfX-JA-YaN" secondAttribute="bottom" constant="8" id="gLv-xV-NVQ"/>
+                                            <constraint firstItem="CaT-T7-G1I" firstAttribute="leading" secondItem="0km-bg-j84" secondAttribute="leading" constant="20" id="grg-L1-Bru"/>
+                                            <constraint firstAttribute="trailing" secondItem="CaT-T7-G1I" secondAttribute="trailing" constant="20" id="iNr-uF-APt"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z3d-OY-898" userLabel="BottoView">
                                         <rect key="frame" x="0.0" y="505.33333333333331" width="375" height="252.66666666666669"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Travel" translatesAutoresizingMaskIntoConstraints="NO" id="dZa-vH-bs8">
+                                                <rect key="frame" x="20" y="20.000000000000057" width="335" height="212.66666666666666"/>
+                                            </imageView>
+                                        </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="dZa-vH-bs8" secondAttribute="bottom" constant="20" id="C04-g9-Ip0"/>
+                                            <constraint firstItem="dZa-vH-bs8" firstAttribute="leading" secondItem="z3d-OY-898" secondAttribute="leading" constant="20" id="NN5-3w-BcB"/>
+                                            <constraint firstItem="dZa-vH-bs8" firstAttribute="top" secondItem="z3d-OY-898" secondAttribute="top" constant="20" id="Sb8-W9-95h"/>
+                                            <constraint firstAttribute="trailing" secondItem="dZa-vH-bs8" secondAttribute="trailing" constant="20" id="hs3-sS-2MP"/>
+                                        </constraints>
                                     </view>
                                 </subviews>
                             </stackView>
@@ -521,6 +587,12 @@
                         <rect key="frame" x="0.0" y="44" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <fontDescription key="fontDescription" name="SnellRoundhand" family="Snell Roundhand" pointSize="17"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -534,16 +606,36 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="ovx-W4-Jpf"/>
-        <segue reference="5nO-vS-Uig"/>
+        <segue reference="2AR-cq-G04"/>
     </inferredMetricsTieBreakers>
     <resources>
-        <image name="AddButtonLight" width="78" height="78"/>
+        <image name="AddButton" width="78" height="78"/>
+        <image name="FlatFlesh" width="44" height="44"/>
         <image name="Hanger" width="360" height="360"/>
+        <image name="Livid" width="44" height="44"/>
+        <image name="MelonMelody" width="44" height="44"/>
         <image name="NewItem" width="949" height="836"/>
+        <image name="ParadiseGreen" width="44" height="44"/>
+        <image name="Spray" width="44" height="44"/>
         <image name="Travel" width="533" height="689"/>
         <image name="ellipsis" catalog="system" width="128" height="37"/>
+        <namedColor name="FlatFlesh">
+            <color red="0.98000001907348633" green="0.82700002193450928" blue="0.56499999761581421" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="LabelWhite">
             <color red="0.92900002002716064" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Livid">
+            <color red="0.41600000858306885" green="0.53700000047683716" blue="0.80000001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="MelonMelody">
+            <color red="0.97299998998641968" green="0.76099997758865356" blue="0.5690000057220459" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="ParadiseGreen">
+            <color red="0.72200000286102295" green="0.91399997472763062" blue="0.57999998331069946" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Spray">
+            <color red="0.50999999046325684" green="0.80000001192092896" blue="0.86699998378753662" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
